# ccm

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: index.html  main.js  style.css
landing/: index.html  style.css
src/ccm/: __main__.py  _markup.py  cli.py  palette.py  paths.py  tui.py
src/ccm/cli/: __init__.py  _app.py  _common.py  _root.py  memory.py  projects.py  sessions.py  stats.py
src/ccm/core/: export.py  memory.py  projects.py  sessions.py  stats.py
src/ccm/tui/: __init__.py  _markup.py  screens.py  widgets.py
tests/: conftest.py
tests/core/: test_paths.py  test_security.py  test_sessions_events.py  test_sessions_sort.py
