[project]
name = "claudecm"
version = "0.1.4"
description = "Claude Code Manager — manage Claude Code projects, sessions, and memory"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "QuocTang" }]
requires-python = ">=3.10"
keywords = ["claude", "claude-code", "cli", "tui", "anthropic", "manager"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "textual>=0.79",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[project.urls]
Homepage = "https://github.com/QuocTang/ccm"
Repository = "https://github.com/QuocTang/ccm"
Issues = "https://github.com/QuocTang/ccm/issues"
Changelog = "https://github.com/QuocTang/ccm/releases"

[project.scripts]
ccm = "ccm.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ccm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
